#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.68])
AC_INIT(unisync-client, 0.1, github.com/Duncanl/unisync-client)

# Checks for programs.

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_PATH_PROGS(BASH, bash sh)

AC_CONFIG_FILES([Makefile
                 bin/Makefile
                 libexec/Makefile])

AM_INIT_AUTOMAKE
AC_OUTPUT
